<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_border"
        tools:context=".View.AddScrapsFragment">


    <TextView
            android:text="@string/add_new_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:fontFamily="@font/goudysto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/title_new_task"/>


    <EditText
            android:id="@+id/input_name"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:inputType="textPersonName"
            android:hint="@string/input_new_task"
            android:paddingLeft="10dp"
            android:background="@drawable/button_border_black"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:ems="16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_new_task"
            android:layout_marginTop="16dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:inputType="textPersonName"
            android:hint="@string/input_description"
            android:paddingLeft="10dp"
            android:textColorHint="#FFFFFF"
            android:layout_marginTop="16sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_border_black"
            android:ems="16"
            android:id="@+id/input_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name"/>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_scraps"
            android:textColor="#212121"
            android:id="@+id/addScrapsButton"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="16sp"
            android:background="@drawable/button_border_white"
            app:layout_constraintEnd_toStartOf="@+id/cancelNewTaskButton"
            app:layout_constraintTop_toBottomOf="@+id/input_description"

            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ОТМЕНИТЬ"
            android:textColor="#00a69c"
            android:id="@+id/cancelNewTaskButton"
            android:gravity="center"
            android:background="@drawable/button_border_black"
            app:layout_constraintEnd_toEndOf="@id/input_description"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>